@startuml



abstract class UnidadModificada{
  - unidadParaModificar: Unidad
  + UnidadModificada(unidadParaModificar: Unidad)

  + getNombre(): String
  + getPuntaje(): Puntaje
  + calcularPuntaje(unidades:List<Unidad>, List<Efecto> efectos )

  + sePuedeColocar(posicion: Posicion): Boolean
  + atrilDestino(jugador, oponente: Jugador): Atril
  + realizarAccionAdicional(jugador, oponente: Jugador, atrilDestino: Atril, posicionElegida: Posicion
}

UnidadModificada <|-- Medico
UnidadModificada <|-- Unida


class Medico{
  + Medico(unidad: Unidad)

  + realizarAccionAdicional(jugador, oponente: Jugador, atrilDestino: Atril, posicionElegida: Posicion
}

class Unida{
  + Unida(unidad: Unidad)

  + calcularPuntaje(unidades:List<Unidad>, List<Efecto> efectos )

}


@enduml